Upgrade to a newer version of graalvm gradle plugin for compatibility with java sdk 25. Enable native access in the generated exe